; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_19085.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_19085.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [41 x i8] c"Please specify a pid to send signal to.\0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@F_SETOWN = common dso_local global i32 0, align 4
@F_GETFL = common dso_local global i32 0, align 4
@F_SETFL = common dso_local global i32 0, align 4
@O_ASYNC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"Sending SIGIO - press enter.\0A\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"SIGIO send attempted.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 2
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32, i32* @stderr, align 4
  %12 = call i32 @fputs(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = call i32 @exit(i32 0) #3
  unreachable

14:                                               ; preds = %2
  %15 = load i8**, i8*** %5, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 1
  %17 = load i8*, i8** %16, align 8
  %18 = call i32 @atoi(i8* %17)
  store i32 %18, i32* %7, align 4
  br label %19

19:                                               ; preds = %14
  %20 = load i32, i32* @F_SETOWN, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @fcntl(i32 0, i32 %20, i32 %21)
  %23 = load i32, i32* @F_GETFL, align 4
  %24 = call i32 @fcntl(i32 0, i32 %23, i32 0)
  store i32 %24, i32* %6, align 4
  %25 = load i32, i32* @F_SETFL, align 4
  %26 = load i32, i32* %6, align 4
  %27 = load i32, i32* @O_ASYNC, align 4
  %28 = or i32 %26, %27
  %29 = call i32 @fcntl(i32 0, i32 %25, i32 %28)
  %30 = call i32 @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %31 = call i32 (...) @getchar()
  %32 = load i32, i32* @F_SETFL, align 4
  %33 = load i32, i32* %6, align 4
  %34 = load i32, i32* @O_ASYNC, align 4
  %35 = xor i32 %34, -1
  %36 = and i32 %33, %35
  %37 = call i32 @fcntl(i32 0, i32 %32, i32 %36)
  %38 = call i32 @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @fputs(i8*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @fcntl(i32, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @getchar(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
